--- a/vite-react-ts/src/components/CheckBlock/index.less
+++ b/vite-react-ts/src/components/CheckBlock/index.less
@@ -16,11 +16,15 @@
 
       font-weight: 400;
       color: #262626;
+      &:hover {
+        color: #7262fd;
+      }
     }
     .select_item_checked {
       background: #f8f7ff;
       border-color: #7262fd;
       border-radius: 2px;
+      color: #7262fd;
     }
     .select_item_disabled {
       background: #f8f7ff;
