--- a/vite-react-ts/src/components/EchartDemo/index.less
+++ b/vite-react-ts/src/components/EchartDemo/index.less
@@ -1,7 +1,7 @@
-
-
 .emotionTrend_box {
-  height: 460px;
-  background: #fff;
-  border: 1px solid red;
+  min-width: 368px;
+  height: 100%;
+  background: #ffffff;
+  border: 2px solid #c3c0fe;
+  border-radius: 2px;
 }
